modified:   .tmux.conf 	modified:   .tmux.conf2

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,8 @@
 unbind C-b
 set -g prefix F12
 bind a send-prefix
+unbind F9
+unbind F10
 
 #unbind l
 bind L source ~/.tmux.conf
@@ -108,9 +110,17 @@ bind BTab select-pane -t:.-
 unbind '"'
 bind '"' choose-window
 
-# copy mode start F11-[
-# copy mode end   F11-]
+# copy mode start F11-y
+# copy mode end   F11-p
+setw -g mode-keys vi
+bind y copy-mode
 # vでマーク開始 (vi like)
 bind -t vi-copy v begin-selection
 # yでヤンク
 bind -t vi-copy y copy-selection
+bind -t vi-copy V rectangle-toggle
+bind p paste-buffer
+
+# buffer
+#bind Space choose-buffer
+
