copied:     .tmux.conf2 -> .tmux.conf 	copied:     .tmux.conf -> .tmux.conf2

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,23 +1,10 @@
-# .byobu/.tmux.conf
-# $Id: screen-keys.conf,v 1.7 2010-07-31 11:39:13 nicm Exp $
-#
-# By Nicholas Marriott. Public domain.
-#
-# This configuration file binds many of the common GNU screen key bindings to
-# appropriate tmux key bindings. Note that for some key bindings there is no
-# tmux analogue and also that this set omits binding some commands available in
-# tmux but not in screen.
-#
-# Note this is only a selection of key bindings and they are in addition to the
-# normal tmux key bindings. This is intended as an example not as to be used
-# as-is.
-
-# Set the prefix to F12.
+# Set the prefix to F11.
+#unbind-key -a
 unbind C-b
-set -g prefix F12
-bind a send-prefix
-unbind F9
-unbind F10
+#unbind F11
+#unbind F12
+set -g prefix F11
+#bind F11 send-prefix
 
 #unbind l
 bind L source ~/.tmux.conf
@@ -37,8 +24,9 @@ bind c new-window
 
 # detach
 unbind ^D
-#bind ^D detach
-bind -n F6 detach
+unbind F6
+bind ^D detach
+#bind -n F6 detach
 
 # displays *
 unbind *
@@ -80,7 +68,7 @@ bind w list-windows
 
 # quit \
 unbind \
-bind \ confirm-before "kill-server"
+Bind \ confirm-before "kill-server"
 
 # kill K k
 unbind K
@@ -96,7 +84,8 @@ bind l refresh-client
 
 # split -v |
 unbind |
-bind | split-window
+#bind | split-window
+bind % split-window -h 
 unbind S
 bind S split-window
 
@@ -105,6 +94,19 @@ unbind Tab
 bind Tab select-pane -t:.+
 unbind BTab
 bind BTab select-pane -t:.-
+unbind F1
+unbind F2
+
+#bind-key -n F1 select-pane -L
+#bind-key -n F2 select-pane -R
+unbind Escape
+unbind F9
+unbind F10
+
+#bind-key -n F9 select-pane -t:.-
+#bind-key -n F10 select-pane -t:.+
+bind -n C-H select-pane -t :.-
+bind -n C-l select-pane -t :.+
 
 # " windowlist -b
 unbind '"'
@@ -124,3 +126,4 @@ bind p paste-buffer
 # buffer
 #bind Space choose-buffer
 
+#set-option -g pane-active-border-fg blue
