--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,10 @@
 # Set the prefix to F11.
 #unbind-key -a
 unbind C-b
-#unbind F11
-#unbind F12
+unbind F11
+unbind F12
 set -g prefix F11
+set -g prefix S-F11
 #bind F11 send-prefix
 
 #unbind l
