modified:   .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,6 +117,7 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 bind -t vi-copy V rectangle-toggle
 bind p paste-buffer
+bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 
 # buffer
 #bind Space choose-buffer
