modified:   .tmux.conf 	deleted:    .tmux.conf.mac

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,9 @@
 # Set the prefix to F11.
-#unbind-key -a
 unbind C-b
-#unbind F11
-#unbind F12
 set -g prefix F11
-#bind F11 send-prefix
+
+# send the prefix to client inside window
+bind -n F12 send-prefix
 
 #unbind l
 bind L source ~/.tmux.conf
@@ -97,14 +96,10 @@ bind BTab select-pane -t:.-
 unbind F1
 unbind F2
 
-#bind-key -n F1 select-pane -L
-#bind-key -n F2 select-pane -R
 unbind Escape
 unbind F9
 unbind F10
 
-#bind-key -n F9 select-pane -t:.-
-#bind-key -n F10 select-pane -t:.+
 bind -n C-H select-pane -t :.-
 bind -n C-l select-pane -t :.+
 
