modified:   .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -123,3 +123,5 @@ bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 #bind Space choose-buffer
 
 #set-option -g pane-active-border-fg blue
+set-option -g allow-rename off
+
