--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,13 +111,31 @@ bind '"' choose-window
 # copy mode end   F11-p
 setw -g mode-keys vi
 bind y copy-mode
+
 # vでマーク開始 (vi like)
-bind -t vi-copy v begin-selection
+#bind -t vi-copy v begin-selection
 # yでヤンク
-bind -t vi-copy y copy-selection
-bind -t vi-copy V rectangle-toggle
-bind p paste-buffer
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+#bind -t vi-copy y copy-selection
+#bind -t vi-copy V rectangle-toggle
+#bind p paste-buffer
+#bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+
+
+# 選択開始
+unbind -t vi-copy v
+bind -t vi-copy v begin-selection
+
+# 一行選択
+bind -t vi-copy V select-line
+
+# コピー
+if-shell 'test "$(uname)" = "Darwin"' 'bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
+if-shell 'test "$(uname -o)" = "Cygwin"' 'bind -t vi-copy y copy-pipe "cat >/dev/clipboard"'
+
+
+
+
+
 
 # buffer
 #bind Space choose-buffer
