modified:   .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -117,7 +117,7 @@ bind y copy-mode
 # yでヤンク
 #bind -t vi-copy y copy-selection
 #bind -t vi-copy V rectangle-toggle
-#bind p paste-buffer
+bind p paste-buffer
 #bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 
 
