--- a/.tmux.conf
+++ b/.tmux.conf
@@ -126,18 +126,7 @@ if-shell 'test "$(uname -o)" = "Cygwin"' 'bind -t vi-copy y copy-pipe "cat >/dev
 unbind -t vi-copy v
 bind -t vi-copy v begin-selection
 
-# select a line
-#bind -t vi-copy V select-line
-
-
-
-
-
-
-
-# buffer
-#bind Space choose-buffer
-
-#set-option -g pane-active-border-fg blue
+# status-line
 set-option -g allow-rename off
+set-option -g status-right ""
 
