--- a/.tmux.conf
+++ b/.tmux.conf
@@ -120,6 +120,7 @@ bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 
 # copy mode on osx
 if-shell 'test "$(uname)" = "Darwin"' 'bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
+# copy mode on cygwin
 if-shell 'test "$(uname -o)" = "Cygwin"' 'bind -t vi-copy y copy-pipe "cat >/dev/clipboard"'
 
 # area select
