modified:   .tmux.conf 	deleted:    .tmux.conf2

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # Set the prefix to F11.
 unbind C-b
 set -g prefix F11
+set -g escape-time 10
 
 # send the prefix to client inside window
 bind -n F12 send-prefix
