--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,8 +43,8 @@ unbind n
 bind n next-window
 
 # title A
-unbind A
-bind A command-prompt "rename-window %%"
+# unbind A
+# bind A command-prompt "rename-window %%"
 
 # other ^A
 unbind ^A
@@ -115,7 +115,8 @@ bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection # yank by y
 bind -t vi-copy V rectangle-toggle
 bind p paste-buffer
-bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+#bind -t vi-copy y copy-pipe "xclip -sel clip -i"
+bind -t vi-copy y copy-pipe "DISPLAY=:0 xclip -sel clip"
 
 # copy mode on osx
 if-shell 'test "$(uname)" = "Darwin"' 'bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
