--- a/.tmux.conf
+++ b/.tmux.conf
@@ -116,7 +116,8 @@ bind -t vi-copy y copy-selection # yank by y
 bind -t vi-copy V rectangle-toggle
 bind p paste-buffer
 #bind -t vi-copy y copy-pipe "xclip -sel clip -i"
-bind -t vi-copy y copy-pipe "DISPLAY=:0 xclip -sel clip"
+#bind -t vi-copy y copy-pipe "DISPLAY=:0 xclip -sel clip"
+bind -t vi-copy y copy-pipe "clip.exe"
 
 # copy mode on osx
 if-shell 'test "$(uname)" = "Darwin"' 'bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
