modified:   .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -119,7 +119,8 @@ bind p paste-buffer
 bind -t vi-copy y copy-pipe "DISPLAY=:0 xclip -sel clip"
 
 # copy mode on osx
-if-shell 'test "$(uname)" = "Darwin"' 'bind -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"'
+if-shell 'test "$(uname)" = "Darwin"' 'bind-key -T copy-mode-vi v send-keys -X begin-selection'
+
 # copy mode on cygwin
 if-shell 'test "$(uname -o)" = "Cygwin"' 'bind -t vi-copy y copy-pipe "cat >/dev/clipboard"'
 
