modified:   .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -111,24 +111,23 @@ bind '"' choose-window
 ## copy mode
 setw -g mode-keys vi
 bind y copy-mode
-#bind -t vi-copy v begin-selection
-#bind -t vi-copy y copy-selection # yank by y
-#bind -t vi-copy V rectangle-toggle
-bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind -t vi-copy v begin-selection
+bind -t vi-copy y copy-selection # yank by y
+bind -t vi-copy V rectangle-toggle
 bind p paste-buffer
 #bind -t vi-copy y copy-pipe "xclip -sel clip -i"
 #bind -t vi-copy y copy-pipe "DISPLAY=:0 xclip -sel clip"
+bind -t vi-copy y copy-pipe "clip.exe"
 
 # copy mode on osx
 if-shell 'test "$(uname)" = "Darwin"' 'bind-key -T copy-mode-vi v send-keys -X begin-selection'
-if-shell 'test "$(uname)" = "Darwin"' 'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"'
 
 # copy mode on cygwin
 if-shell 'test "$(uname -o)" = "Cygwin"' 'bind -t vi-copy y copy-pipe "cat >/dev/clipboard"'
 
 # area select
-#unbind -t vi-copy v
-#bind -t vi-copy v begin-selection
+unbind -t vi-copy v
+bind -t vi-copy v begin-selection
 
 # status-line
 set-option -g allow-rename off
